tests/snapshots/infos/misbehaviors_ban_unban/bad_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - infos
    - misbehaviors-ban-unban
    - UnknownType
    - 1.2.3.4
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Invalid value for: body (invalid tag for tagged object: UnknownType at index 28: decoding failure)
