tests/snapshots/infos/misbehaviors_ban_unban/ban_no_peers.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - infos
    - misbehaviors-ban-unban
    - Ban
---
success: true
exit_code: 0
----- stdout -----
Success!

----- stderr -----
