tests/snapshots/infos/misbehaviors_ban_unban/ban_several_peers.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - infos
    - misbehaviors-ban-unban
    - Ban
    - 1.2.3.4
    - 5.6.7.8
---
success: true
exit_code: 0
----- stdout -----
Success!

----- stderr -----
